tap model ready to go

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,12 @@
 env*
+data/
 *.pyc
 *.csv
-*.json
-*.jsonl
-*.jsonl.gz
-*.jsonl.gz.part
-*.png
-*.jpg
-*.jpeg
 *.gif
 *.bmp
 *.tiff
 *.ico
 *.webp
-*.wav
 *.mp3
 *.avi
 *.mov
