commented out a lot, needed for testing UI

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,17 @@
 customtkinter
 gpiozero
-matplotlib
 lgpio
-numpy==1.24.3
-pillow
+numpy==1.24.4
+numba==0.57.1
 pynput
 regex
 rpi-lgpio
 RPi.GPIO
-scipy==1.10.1
+scipy
 sounddevice
 wave
 librosa
-pandas
-scikit-learn 
-xgboost
-torch
-torchvision
 pyserial
 serial
 pydantic
+pillow
